# plane_finder

./: CMakeLists.txt  README.md  stack.xml
nomad_core/: CMakeLists.txt  mainpage.dox  manifest.xml
nomad_core/scripts/: record_from_pr2.sh
nomad_core/src/: from_bag.cpp  node.cpp  plane_node.cpp
plane_finder/: CMakeLists.txt  manifest.xml
plane_finder/include/plane_finder/: plane_finder.hpp  plane_finder_node.hpp
plane_finder/launch/: plane_finder.launch
plane_finder/src/: plane_node.cpp
plane_mapper/: CMakeLists.txt  manifest.xml
plane_mapper/include/plane_mapper/: plane_mapper_node.hpp
plane_mapper/src/: plane_mapper_node.cpp
